# blog

./: .gitignore  Dockerfile  Dockerfile.nginx  Dockerfile.server  Makefile  README.md  WORKSPACE  build.sbt  cloudbuild-canary.yaml  cloudbuild-master.yaml  cloudbuild-stage.yaml  cloudbuild-staging.yaml  cloudbuild.yaml  config.yaml  go.mod  go.sum  pom.xml  production.toml  repositories.bzl  staging.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  prod.yaml  staging.yaml
app/controllers/: Application.scala
app/models/: Article.scala  DatedArticle.scala
app/views/: article.scala.html  main.scala.html  til.scala.html
cmd/site/: BUILD.bazel  root.go  run.go
conf/: application.conf  nginx.conf  routes
content/: Dockerfile  book.toml  manifest.yaml
content/posts/: 20170527-preamble.html  20170527-preamble.md  20170527-up-and-running.html  20170527-up-and-running.md  20170604-kubernetes.html  20170604-kubernetes.md  20190126-configmaps-secrets-initcontainers.html  20190126-configmaps-secrets-initcontainers.md  20200404-java-classpath-ordering-and-containers.html  20200404-java-classpath-ordering-and-containers.md  20200412-proc-mem.html  20200412-proc-mem.md  20201019-crypto-crashing-curl.html  20201019-crypto-crashing-curl.md
content/src/: SUMMARY.md
content/templates/: _styles.html.tpl  index.html.tpl  post.html.tpl  post_index.html.tpl  useful.html.tpl
content/useful/: index.html  intellij.html  preamble.md  ramdisk.html  ramdisk.md  yubikey.md  yubikeys.html
deploy/: Dockerfile-deploy  deploy.sh  run_deploy.sh
deploy/helm/: Chart.yaml  values-staging.yaml  values.yaml
helm/: Chart.yaml  tiller-rbac.yaml  values-staging.yaml  values.yaml
helm/templates/: _helpers.tpl  certificate.yaml  cluster-issuer.yaml  deployment.yaml  ignress.yaml  service.yaml
internal/config/: BUILD.bazel  config.go  config_test.go
internal/content/: BUILD.bazel  index.go  page.go  template.go
internal/handler/: BUILD.bazel  post.go
kube/gcp/: deployment-canary.yaml  deployment-prod.yaml  deployment-stage.yaml  ingress-canary.yaml  ingress-prod.yaml  ingress-stage.yaml  service-prod.yaml  service-stage.yaml
kube/local/: deployment.yaml
nginx/: Dockerfile  nginx.conf
pkg/cmd/site/: BUILD.bazel  run.go
pkg/internal/content/: BUILD.bazel  content.go  manifest.go  template.go
project/: plugins.sbt
public/javascripts/: highlight.pack.js
public/stylesheets/: main.css
templates/: _styles.html.tpl  index.html.tpl  post.html.tpl  useful.html.tpl  useful_index.html.tpl
webserver/: pom.xml
(+88 files in other folders)
