load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/nicktrav/site/internal/config",
    visibility = ["//:__subpackages__"],
    deps = ["@in_gopkg_yaml_v2//:go_default_library"],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
)
