load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "content",
    srcs = [
        "index.go",
        "page.go",
        "template.go",
    ],
    importpath = "github.com/nicktrav/site/internal/content",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_russross_blackfriday_v2//:go_default_library"],
)
