load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "content",
    srcs = [
        "content.go",
        "manifest.go",
        "template.go",
    ],
    importpath = "github.com/nicktrav/site/pkg/internal/content",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_gorilla_handlers//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
